--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 04:05:02 2018</p>
+         Last Run: Thu Nov 15 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -49,7 +49,7 @@
                         <td>78</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -74,7 +74,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -202,8 +202,8 @@
                "data":[
                  "2",
                  "2",
-                 "2",
-                 "4"
+                 "3",
+                 "5"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 04:05:02 2018</p>
+         Last Run: Thu Nov 15 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -266,13 +266,13 @@
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
-                        <td>0</td>
+                        <td>-1</td>
                         <td>1</td>
                         <td>49</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -280,23 +280,23 @@
                         <td>5</td>
                         <td>2</td>
                         <td>1</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>83</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>7</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>79</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,7 +323,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
+                 "-1",
                  "2",
                  "4"
                ]
@@ -406,8 +406,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "49",
-                 "45",
-                 "42"
+                 "44",
+                 "41"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "83",
-                 "79"
+                 "89",
+                 "87",
+                 "85"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 04:05:02 2018</p>
+         Last Run: Thu Nov 15 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,10 +480,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>1</td>
-                        <td>68</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -492,13 +492,13 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>1</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>42</td>
                      </tr>
                      <tr>
@@ -507,11 +507,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,8 +538,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-4",
                  "-5",
-                 "-6",
                  "-6"
                ]
              },
@@ -550,8 +550,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "0",
                  "-1",
-                 "-2",
                  "-2"
                ]
              }
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "66",
                  "68",
-                 "69",
-                 "71"
+                 "70"
                ]
              },
              {
@@ -633,7 +633,7 @@
                "data":[
                  "47",
                  "42",
-                 "37"
+                 "38"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 04:05:02 2018</p>
+         Last Run: Thu Nov 15 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -707,8 +707,8 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-6</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>3</td>
                         <td>67</td>
                         <td>0</td>
@@ -725,8 +725,8 @@
                         <td>68</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>WSW</td>
-                        <td>65</td>
+                        <td>W</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-6",
+                 "-4",
                  "-5"
                ]
              },
@@ -766,7 +766,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "-1",
+                 "0",
                  "-1"
                ]
              }
@@ -848,7 +848,7 @@
                "data":[
                  "65",
                  "66",
-                 "65"
+                 "64"
                ]
              }
            ]
