--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 08:05:02 2018</p>
+         Last Run: Thu Nov 15 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>4</td>
-                        <td>90</td>
+                        <td>91</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -50,15 +50,15 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>2</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-7</td>
+                        <td>-11</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -67,10 +67,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -104,8 +104,8 @@
                "data":[
                  "-17",
                  "-14",
-                 "-10",
-                 "-6"
+                 "-11",
+                 "-7"
                ]
              },
              {
@@ -117,8 +117,8 @@
                "data":[
                  "-12",
                  "-10",
-                 "-6",
-                 "-3"
+                 "-7",
+                 "-4"
                ]
              }
            ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
+                 "91",
                  "81",
-                 "66",
-                 "55"
+                 "68",
+                 "58"
                ]
              },
              {
@@ -201,7 +201,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "2",
-                 "2",
+                 "3",
                  "3",
                  "4"
                ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 08:05:02 2018</p>
+         Last Run: Thu Nov 15 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -266,37 +266,37 @@
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
-                        <td>-1</td>
-                        <td>1</td>
-                        <td>49</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>1</td>
+                        <td>51</td>
+                        <td>0</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>90</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>6</td>
-                        <td>3</td>
+                        <td>5</td>
+                        <td>2</td>
                         <td>1</td>
-                        <td>45</td>
-                        <td>0</td>
-                        <td>16</td>
-                        <td>W</td>
-                        <td>88</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Overcast</td>
-                        <td>7</td>
-                        <td>4</td>
+                        <td>48</td>
                         <td>1</td>
-                        <td>42</td>
-                        <td>0</td>
                         <td>14</td>
                         <td>W</td>
                         <td>84</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>1</td>
+                        <td>44</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,9 +323,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
-                 "3",
-                 "4"
+                 "0",
+                 "2",
+                 "5"
                ]
              },
              {
@@ -336,7 +336,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "3",
-                 "6",
+                 "5",
                  "7"
                ]
              }
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "45",
-                 "42"
+                 "51",
+                 "48",
+                 "44"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
-                 "88",
-                 "84"
+                 "89",
+                 "84",
+                 "79"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 08:05:02 2018</p>
+         Last Run: Thu Nov 15 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,15 +479,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
+                        <td>Clear</td>
+                        <td>-1</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>30</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,11 +495,11 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>68</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>25</td>
+                        <td>WSW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>69</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "-1",
                  "-1",
                  "-2"
                ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "68",
-                 "69"
+                 "70",
+                 "71",
+                 "72"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "25",
-                 "22"
+                 "29",
+                 "24",
+                 "21"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 08:05:02 2018</p>
+         Last Run: Thu Nov 15 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>WSW</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>70</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
                  "66",
-                 "67"
+                 "67",
+                 "68"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "71",
-                 "70"
+                 "69",
+                 "72",
+                 "72"
                ]
              }
            ]
